# sfn2024-behavior-hw-demo

./: README.md  pyproject.toml
bonsai/: Bonsai.config
examples/: Rig.json  examples.py
scripts/: regenerate.py
src/: Extensions.csproj  demo.bonsai
src/DataSchemas/: rig.json
src/DataSchemas/sfn2024_behavior_hw_demo/: rig.py
src/Extensions/: AindVrForagingTaskLogic.cs  Rig.cs
